[package]
name = "sqlite-fs"
version = "0.1.0"
authors = ["Matsumura <naruaki.matt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuse = "0.3"
chrono = "0.4"
libc = "0.2"
failure = "0.1"
log = "0.4"
env_logger = "0.7"
time = "0.1"
clap = "2.33"
nix = "0.15"

[dependencies.rusqlite]
version = "0.20.0"
features = ["bundled", "blob"]

[dev-dependencies]
tempfile = "3"

